--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,51 @@
+asgiref==3.5.1
+backports.zoneinfo==0.2.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+coreapi==2.3.3
+coreschema==0.0.4
+defusedxml==0.7.1
+diff-match-patch==20200713
 Django==4.0.4
 django-admin-interface==0.19.0
 django-archive==0.2.0
 django-colorfield==0.6.3
+django-crispy-forms==1.14.0
+django-extensions==3.1.5
 django-filter==21.1
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
 django-import-export==2.8.0
+django-location-field==2.1.0
+django-registration-redux==2.10
 django-tinymce==3.4.0
 django-versatileimagefield==2.2
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 docutils==0.18.1
+et-xmlfile==1.1.0
+idna==3.3
+importlib-metadata==4.11.3
+itypes==1.2.0
+Jinja2==3.1.2
 Markdown==3.3.6
+MarkupPy==1.14
+MarkupSafe==2.1.1
+odfpy==1.4.1
+openpyxl==3.0.9
 Pillow==9.1.0
+psycopg2-binary==2.9.3
 PyJWT==2.3.0
 python-decouple==3.6
-django-crispy-forms
-django-extensions
-django-registration-redux
+python-magic==0.4.25
+pytz==2022.1
+PyYAML==6.0
+requests==2.27.1
+six==1.16.0
+sqlparse==0.4.2
+tablib==3.2.1
+uritemplate==4.1.1
+urllib3==1.26.9
+xlrd==2.0.1
+xlwt==1.3.0
+zipp==3.8.0
